Usei uma função para salvar o modelo treinado em arquivo .pkl

--- a/model.ipynb
+++ b/model.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 1,
    "id": "9dcefeb7-1801-4818-91f6-549abecd9e34",
    "metadata": {},
    "outputs": [],
@@ -16,7 +16,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 2,
    "id": "2c5da3c0-afaf-4b9b-8ea7-c6128a349b47",
    "metadata": {},
    "outputs": [],
@@ -51,6 +51,32 @@
     "    # Aqui por fim dessa função eu retornei o modelo treinado e as métricas para analisar depois\n",
     "    return model, rmse, r2"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 3,
+   "id": "ad580d8b-c5e7-457e-b868-fb6cf6a6728d",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def save_model(model, filepath):\n",
+    "    \"\"\"\n",
+    "    Usei essa função para salvar o modelo treinado em um arquivo .pkl (que é um\n",
+    "    dos critérios do desadio, pois assim a gente pode usar ele depois sem \n",
+    "    precisar treinar tudo de novo.\n",
+    "    \"\"\"\n",
+    "\n",
+    "    with open(filepath, 'wb') as f:\n",
+    "        pickle.dump(model, f)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "3b5ab86f-50fb-4e2e-87da-ef171bff8158",
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
