Usei uma fuunção para carregar o modelo salvo de um arquivo .pkl

--- a/model.ipynb
+++ b/model.ipynb
@@ -72,11 +72,21 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 4,
    "id": "3b5ab86f-50fb-4e2e-87da-ef171bff8158",
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "def load_model(filepath):\n",
+    "    \"\"\"\n",
+    "    Usei essa função para carregar o modelo que foi salvo em um arquivo .pkl\n",
+    "    para usar em previsões futuras.\n",
+    "    \"\"\"\n",
+    "\n",
+    "    with open(filepath, 'rb') as f:\n",
+    "        model = pickle.load(f)\n",
+    "    return model"
+   ]
   }
  ],
  "metadata": {
