Carreguei e preparei os dados

--- a/notebooks/02_Modelagem.ipynb
+++ b/notebooks/02_Modelagem.ipynb
@@ -29,7 +29,9 @@
     "import pandas as pd\n",
     "\n",
     "# Aqui eu carreguei e preparei os dados\n",
-    "df = load_and_clean_data("
+    "df = load_and_clean_data('../data/desafio_indicium_imdb.csv')\n",
+    "df = split_genres(df)\n",
+    "df = extract_main_genre(df)"
    ]
   },
   {
