--- a/notebooks/02_Modelagem.ipynb
+++ b/notebooks/02_Modelagem.ipynb
@@ -13,10 +13,38 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 2,
    "id": "6ad8e42d-840d-4311-93d7-371df10280de",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "C:\\Users\\Maria Eduarda\\OneDrive\\LH_CD_MARIAEDUARDATREVIZANEBUONAFINA\\notebooks\\../src\\data_processing.py:32: FutureWarning: A value is trying to be set on a copy of a DataFrame or Series through chained assignment using an inplace method.\n",
+      "The behavior will change in pandas 3.0. This inplace method will never work because the intermediate object on which we are setting values always behaves as a copy.\n",
+      "\n",
+      "For example, when doing 'df[col].method(value, inplace=True)', try using 'df.method({col: value}, inplace=True)' or df[col] = df[col].method(value) instead, to perform the operation inplace on the original object.\n",
+      "\n",
+      "\n",
+      "  df['Meta_score'].fillna(df['Meta_score'].median(), inplace=True)\n",
+      "C:\\Users\\Maria Eduarda\\OneDrive\\LH_CD_MARIAEDUARDATREVIZANEBUONAFINA\\notebooks\\../src\\data_processing.py:33: FutureWarning: A value is trying to be set on a copy of a DataFrame or Series through chained assignment using an inplace method.\n",
+      "The behavior will change in pandas 3.0. This inplace method will never work because the intermediate object on which we are setting values always behaves as a copy.\n",
+      "\n",
+      "For example, when doing 'df[col].method(value, inplace=True)', try using 'df.method({col: value}, inplace=True)' or df[col] = df[col].method(value) instead, to perform the operation inplace on the original object.\n",
+      "\n",
+      "\n",
+      "  df['Gross'].fillna(df['Gross'].median(), inplace=True)\n",
+      "C:\\Users\\Maria Eduarda\\OneDrive\\LH_CD_MARIAEDUARDATREVIZANEBUONAFINA\\notebooks\\../src\\data_processing.py:38: FutureWarning: A value is trying to be set on a copy of a DataFrame or Series through chained assignment using an inplace method.\n",
+      "The behavior will change in pandas 3.0. This inplace method will never work because the intermediate object on which we are setting values always behaves as a copy.\n",
+      "\n",
+      "For example, when doing 'df[col].method(value, inplace=True)', try using 'df.method({col: value}, inplace=True)' or df[col] = df[col].method(value) instead, to perform the operation inplace on the original object.\n",
+      "\n",
+      "\n",
+      "  df['Certificate'].fillna('Não foi informado', inplace=True)\n"
+     ]
+    }
+   ],
    "source": [
     "# Novamente primeiro aqui eu importei as funções que criei no src para carregar e limpar os dados\n",
     "import sys\n",
@@ -31,7 +59,11 @@
     "# Aqui eu carreguei e preparei os dados\n",
     "df = load_and_clean_data('../data/desafio_indicium_imdb.csv')\n",
     "df = split_genres(df)\n",
-    "df = extract_main_genre(df)"
+    "df = extract_main_genre(df)\n",
+    "\n",
+    "# Nesse código abaixo eu escolhi as váriáveis que vou usar para prever a nota IMDB\n",
+    "features = ['Runtime', 'Meta_score', 'Gross']\n",
+    "target = 'IMDB_Rating'"
    ]
   },
   {
