Treinei o modelo e peguei as métricas

--- a/notebooks/02_Modelagem.ipynb
+++ b/notebooks/02_Modelagem.ipynb
@@ -63,7 +63,15 @@
     "\n",
     "# Nesse código abaixo eu escolhi as váriáveis que vou usar para prever a nota IMDB\n",
     "features = ['Runtime', 'Meta_score', 'Gross']\n",
-    "target = 'IMDB_Rating'"
+    "target = 'IMDB_Rating'\n",
+    "\n",
+    "# Aqui eu treinei o modelo e e peguei as métricas para avliar\n",
+    "model, rmse, r2 = train_model(df, features, target)\n",
+    "\n",
+    "print(f'RMSE: {rmse:.3f}') #Erro médio das previsões\n",
+    "print(f'R2: {r2:.3f}') # Quanto o modelo explica da variação\n",
+    "\n",
+    "# Nesse"
    ]
   },
   {
