Comentários sobre o código e conclusão da modelagem

--- a/notebooks/02_Modelagem.ipynb
+++ b/notebooks/02_Modelagem.ipynb
@@ -13,10 +13,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 1,
    "id": "6ad8e42d-840d-4311-93d7-371df10280de",
    "metadata": {},
    "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "RMSE: 0.247\n",
+      "R2: 0.067\n"
+     ]
+    },
     {
      "name": "stderr",
      "output_type": "stream",
@@ -71,16 +79,29 @@
     "print(f'RMSE: {rmse:.3f}') #Erro médio das previsões\n",
     "print(f'R2: {r2:.3f}') # Quanto o modelo explica da variação\n",
     "\n",
-    "# Nesse"
+    "# Aviso: Novamente o Pandas mostra uma FutureWarning sobre o uso de inplace=True em colunas individuais.\n",
+    "# Como eu sou iniciante nessa área, optei por seguir dessa forma pois ainda funciona corretamente na versão atual.\n",
+    "# Estou continuamente em busca de melhorar  o meu código e espero que futuramente esses avisos não precisem mais acontecer\n",
+    "# Tornando os meus futuros códigos a prova de versões futuras do pandas\n"
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "98e7b397-921d-40d3-9648-11057110edd7",
+   "cell_type": "markdown",
+   "id": "47d3f2dd-e6c4-47ad-890c-6224b0a8c5ff",
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "source": [
+    "Sobre o bloco acima eu escolhi variáveis que fazem sentido para prever a nota, treinei um odelo simples e salvei para usar depois. O RMSE e R2 eles ajudam a entender se o modelo está bom."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "08707b36-0898-4c4e-a2c4-33d91727e098",
+   "metadata": {},
+   "source": [
+    "# Conclusão\n",
+    "- O modelo conseguiu explicar boa parte da variação da nota IMDB, mas ainda tem espaço para melhorar.\n",
+    "- Variáveis como duração, meta score e faturamento são importantes para prever a nota."
+   ]
   }
  ],
  "metadata": {
