Salvei o modelo na pasta models

--- a/notebooks/02_Modelagem.ipynb
+++ b/notebooks/02_Modelagem.ipynb
@@ -79,6 +79,12 @@
     "print(f'RMSE: {rmse:.3f}') #Erro médio das previsões\n",
     "print(f'R2: {r2:.3f}') # Quanto o modelo explica da variação\n",
     "\n",
+    "\n",
+    "# Usei este código para salvar o modelo na pasta models\n",
+    "save_model(model, '../models/imdb_rating_model.pkl')\n",
+    "\n",
+    "pri\n",
+    "\n",
     "# Aviso: Novamente o Pandas mostra uma FutureWarning sobre o uso de inplace=True em colunas individuais.\n",
     "# Como eu sou iniciante nessa área, optei por seguir dessa forma pois ainda funciona corretamente na versão atual.\n",
     "# Estou continuamente em busca de melhorar  o meu código e espero que futuramente esses avisos não precisem mais acontecer\n",
