--- a/notebooks/02_Modelagem.ipynb
+++ b/notebooks/02_Modelagem.ipynb
@@ -22,7 +22,8 @@
      "output_type": "stream",
      "text": [
       "RMSE: 0.247\n",
-      "R2: 0.067\n"
+      "R2: 0.067\n",
+      "Modelo salvo com sucesso na pasta 'models/'!\n"
      ]
     },
     {
@@ -83,7 +84,7 @@
     "# Usei este código para salvar o modelo na pasta models\n",
     "save_model(model, '../models/imdb_rating_model.pkl')\n",
     "\n",
-    "pri\n",
+    "print(\"Modelo salvo com sucesso na pasta 'models/'!\")\n",
     "\n",
     "# Aviso: Novamente o Pandas mostra uma FutureWarning sobre o uso de inplace=True em colunas individuais.\n",
     "# Como eu sou iniciante nessa área, optei por seguir dessa forma pois ainda funciona corretamente na versão atual.\n",
