inclusão de teste do modelo com o filme fornecido pelo desafio e melhorias e correções gerais em alguns arquivos do projeto

--- a/notebooks/01_EDA.ipynb
+++ b/notebooks/01_EDA.ipynb
@@ -350,7 +350,7 @@
    "id": "704481b6-f777-48ae-9556-6265fc7bbdfb",
    "metadata": {},
    "source": [
-    "Nesse bloco de código abaixo eu fiz esse gráfico que le mostra se filmes com maior nota tendem a faturar mais, ou se isso não tem muita relação."
+    "Nesse bloco de código abaixo eu fiz esse gráfico que mostra se filmes com maior nota tendem a faturar mais, ou se isso não tem muita relação."
    ]
   },
   {
