--- a/notebooks/02_Modelagem.ipynb
+++ b/notebooks/02_Modelagem.ipynb
@@ -111,36 +111,121 @@
   },
   {
    "cell_type": "markdown",
-   "id": "08707b36-0898-4c4e-a2c4-33d91727e098",
+   "id": "f4099a9c-f645-4d71-8f7f-14b39f19eb3a",
    "metadata": {},
    "source": [
-    "# Conclusão\n",
+    "## Testando o modelo com o filme fornecido no desafio\n",
     "\n",
-    "- O modelo conseguiu explicar uma parte boa da variação da nota IMDB.\n",
+    "Agora que o modelo já foi treinado e salvo, vou usar ele para prever a nota IMDB do filme com base nas suas características.\n",
     "\n",
-    "- Variáveis como Duração, Metascore e Faturamento realmente ajudam a prever a nota.\n",
+    "```python\n",
+    "{\n",
+    "    'Series_Title': 'The Shawshank Redemption',\n",
+    "    'Released_Year': '1994',\n",
+    "    'Certificate': 'A',\n",
+    "    'Runtime': '142 min',\n",
+    "    'Genre': 'Drama',\n",
+    "    'Overview': 'Two imprisoned men bond over a number of years, finding solace and eventual redemption through acts of common decency.',\n",
+    "    'Meta_score': 80.0,\n",
+    "    'Director': 'Frank Darabont',\n",
+    "    'Star1': 'Tim Robbins',\n",
+    "    'Star2': 'Morgan Freeman',\n",
+    "    'Star3': 'Bob Gunton',\n",
+    "    'Star4': 'William Sadler',\n",
+    "    'No_of_Votes': 2343110,\n",
+    "    'Gross': '28,341,469'\n",
+    "}"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 4,
+   "id": "bf88d34d-e47e-4489-9b69-f52b0a544d14",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "A nota IMDB prevista para 'The Shawshank Redemption' é: 8.00\n"
+     ]
+    }
+   ],
+   "source": [
+    "# Primeiro aqui eu importei o joblib para poder carregar o modelo que eu já tinha salvo antes\n",
+    "import joblib \n",
+    "import pandas as pd\n",
     "\n",
-    "- Ainda dá para melhorar o modelo no futuro, talvez testando outras variáveis que também vieram da API, como idioma, país ou diretor.\n",
+    "# Aqui eu carreguei o modelo treinado\n",
+    "modelo_carregado = joblib.load('../models/imdb_rating_model.pkl')\n",
     "\n",
-    "- Mesmo sendo um modelo simples, essa foi uma boa base para entender como funciona o processo de prever algo usando dados reais."
+    "# Aqui eu criei um dicionário com os dados que a empresa forneceu\n",
+    "filme_teste = {\n",
+    "    'Runtime': 142, # Eu converti de '142 min' para número\n",
+    "    'Meta_score': 80.0,\n",
+    "    'Gross': 28341469 # Eu tirei a vírgula e transformei para número inteiro\n",
+    "}\n",
+    "\n",
+    "# Agora eu criei um DataFrame com esse dicionário, porque o modelo espera os dados nesse formato\n",
+    "df_teste = pd.DataFrame([filme_teste])\n",
+    "\n",
+    "# Aqui eu usei o modelo para prever a nota IMDB do filme\n",
+    "nota_prevista = modelo_carregado.predict(df_teste)[0]\n",
+    "\n",
+    "# Aqui eu mostro o resultado]\n",
+    "print(f\"A nota IMDB prevista para 'The Shawshank Redemption' é: {nota_prevista:.2f}\")"
    ]
   },
   {
    "cell_type": "markdown",
-   "id": "cec783e6-95ae-4250-a6e2-7e22031af174",
+   "id": "7bb8107f-a927-4430-b5f6-1dfea5c47c06",
    "metadata": {},
    "source": [
-    "## Melhorias Futuras\n",
+    "### Resultado da predição\n",
     "\n",
-    "- Testar novos modelos: Por enquanto usei um modelo simples (regressão linear), mas no futuro posso tentar outros como Random Forest ou XGBoost para ver se consigo melhorar o desempenho.\n",
+    "O modelo previu que a nota IMDB para o filme *The Shawshank Redemption* seria aproximadamente **8.00**\n",
     "\n",
-    "- Explorar outras variáveis da API: A API OMDb trouxe várias informações extras, como idioma, país e diretor. Talvez essas variáveis também tenham relação com a nota e possam ajudar o modelo.\n",
+    "Esse resultado mostra que o modelo conseguiu prever uma nota alta, o que é coerente com o que sabemos sobre esse filme, já que ele é um dos mais bem avaliados da história do cinema. Mesmo que o modelo não tenha utilizado todas as variáveis disponíveis, como o texto do overview, os nomes dos atores ou o gênero, ele ainda assim conseguiu chegar em um valor próximo da realidade.\n",
     "\n",
-    "- Tratar melhor os valores ausentes: Alguns filmes não tinham certos dados preenchidos, e isso pode afetar o modelo. Uma limpeza mais avançada pode ajudar.\n",
+    "As variáveis que usei para treinar o modelo foram:\n",
     "\n",
-    "- Analisar os outliers: Alguns filmes têm faturamentos muito acima da média. Analisar e talvez tratar esses valores pode ajudar o modelo a ser mais estável.\n",
+    "Runtime (duração do filme): 142 minutos\n",
     "\n",
-    "- Transformar o projeto em uma API ou interface: No futuro, posso transformar o modelo em um serviço onde a pessoa coloca as informações de um filme e recebe a previsão da nota."
+    "Meta_score (nota da crítica): 80.0\n",
+    "\n",
+    "Gross (faturamento): 28.341.469\n",
+    "\n",
+    "Essas variáveis foram escolhidas porque achei que fazem sentido na hora de tentar prever a nota de um filme. Por exemplo:\n",
+    "\n",
+    "Filmes mais longos geralmente têm roteiros mais complexos e podem receber avaliações mais sérias.\n",
+    "\n",
+    "Um Meta_score alto indica que a crítica especializada gostou do filme.\n",
+    "\n",
+    "Um faturamento alto pode estar relacionado à popularidade, e filmes populares às vezes têm boas notas (mas nem sempre, então é bom ter cuidado com isso)."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "e3c52e10-3df6-447d-b8a4-ab68598471bd",
+   "metadata": {},
+   "source": [
+    "# Conclusão\n",
+    "\n",
+    "Nesse projeto, eu consegui aplicar todo o processo de modelagem de forma prática, desde a preparação dos dados até a previsão da nota IMDB de um filme.\n",
+    "\n",
+    "Mesmo sendo iniciante na área de dados, consegui entender e aplicar:\n",
+    "\n",
+    "Como escolher variáveis que fazem sentido para o problema;\n",
+    "\n",
+    "Como treinar um modelo de regressão;\n",
+    "\n",
+    "Como avaliar a performance do modelo com métricas como RMSE e R2;\n",
+    "\n",
+    "E como usar o modelo treinado para prever a nota de um novo filme.\n",
+    "\n",
+    "As variáveis que eu escolhi (Runtime, Meta_score e Gross) mostraram que têm uma relação com a nota do IMDB, e o modelo conseguiu fazer uma previsão coerente.\n",
+    "\n",
+    "No futuro, pretendo melhorar incluindo outras variáveis como gênero, overview (sinopse), diretor, atores e até dados externos como idioma ou país. Também quero testar outros tipos de modelos e aprofundar no ajuste de hiperparâmetros."
    ]
   }
  ],
